<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;

class PasswordResetRequest extends Model
{
    public const STATUS_PENDING = 'pending';
    public const STATUS_RESOLVED = 'resolved';
    public const STATUS_DISMISSED = 'dismissed';

    protected $fillable = [
        'user_id',
        'university_id',
        'email',
        'student_number',
        'message',
        'status',
        'handled_by',
        'handled_at',
    ];

    protected $casts = [
        'handled_at' => 'datetime',
    ];

    /** Returns the user who submitted this reset request. */
    public function user(): BelongsTo
    {
        return $this->belongsTo(User::class);
    }

    /** Returns the university associated with this request. */
    public function university(): BelongsTo
    {
        return $this->belongsTo(University::class);
    }

    /** Returns the admin who handled this request. */
    public function handler(): BelongsTo
    {
        return $this->belongsTo(User::class, 'handled_by');
    }

    /** Scopes requests to the given or authenticated admin's university. */
    public function scopeForAdminUniversity($query, ?int $universityId = null)
    {
        $universityId = $universityId ?? auth()->user()?->university_id;

        if (!$universityId) {
            return $query->whereRaw('1 = 0');
        }

        return $query->where('university_id', $universityId);
    }
}
