// PMS — Entity Relationship Diagram (DBML)
// Import: https://dbdiagram.io/d
// Verified against Laravel migrations — June 2026
//
// Omitted (unused in app): ratings, password_reset_tokens, failed_jobs

Project PMS {
  database_type: "MySQL"
  Note: "Multi-tenant university project management system"
}

Table universities {
  id bigint [pk, increment]
  name varchar(255)
  slug varchar(255) [unique, null]
  is_active boolean [default: true]
  created_at timestamp
  updated_at timestamp
  Note: "Tenant root — each university is isolated"
}

Table roles {
  id bigint [pk, increment]
  name varchar [unique, note: "admin | student | supervisor | super_admin"]
  created_at timestamp
  updated_at timestamp
  Note: "Role types — NOT separate tables per role"
}

Table users {
  id bigint [pk, increment]
  name varchar
  email varchar [unique]
  email_verified_at timestamp [null]
  password varchar
  github_token varchar [null]
  remember_token varchar [null]
  role_id bigint [not null, ref: > roles.id]
  university_id bigint [not null, ref: > universities.id]
  student_number varchar(50) [null]
  status varchar [default: "pending", note: "pending | active | rejected"]
  created_at timestamp
  updated_at timestamp
  Indexes {
    (university_id, status)
    (university_id, student_number) [unique]
  }
  Note: """
  ONE table for ALL user types:
  • admin → university_id = their university, manages tenant users
  • student → creates projects, uses AI
  • supervisor → supervises projects (+ supervisor_universities)
  • super_admin → platform routes; TenantScope bypass via role
  """
}

Table user_profiles {
  id bigint [pk, increment]
  user_id bigint [unique, not null, ref: - users.id]
  phone varchar [null]
  avatar varchar [null]
  university_name varchar [null]
  student_number varchar [null]
  created_at timestamp
  updated_at timestamp
}

Table supervisor_universities {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  university_id bigint [not null, ref: > universities.id]
  status varchar(20) [default: "pending", note: "pending | active"]
  accepting_supervision boolean [default: true]
  approved_at timestamp [null]
  approved_by bigint [null, ref: > users.id]
  Note: "M:N supervisor↔university. No timestamps on this table."
  Indexes {
    (user_id, university_id) [unique]
  }
}

Table projects {
  id bigint [pk, increment]
  title varchar
  description text [null]
  status varchar [default: "pending", note: "pending | in_progress | completed"]
  user_id bigint [not null, ref: > users.id, note: "Project owner (student)"]
  supervisor_id bigint [null, ref: > users.id]
  university_id bigint [not null, ref: > universities.id]
  github_repo_url varchar [null]
  github_branch varchar [default: "main"]
  github_last_synced_at timestamp [null]
  created_at timestamp
  updated_at timestamp
}

Table project_members {
  id bigint [pk, increment]
  project_id bigint [not null, ref: > projects.id]
  student_id bigint [not null, ref: > users.id]
  status varchar [default: "accepted", note: "pending | accepted | rejected"]
  created_at timestamp
  updated_at timestamp
  Indexes {
    (project_id, student_id) [unique]
  }
  Note: "Primary team membership pivot"
}

Table project_user {
  id bigint [pk, increment]
  project_id bigint [not null, ref: > projects.id]
  user_id bigint [not null, ref: > users.id]
  created_at timestamp
  updated_at timestamp
  Indexes {
    (project_id, user_id) [unique]
  }
  Note: "Legacy pivot — prefer project_members"
}

Table tasks {
  id bigint [pk, increment]
  title varchar
  description text [null]
  status varchar [default: "pending", note: "pending | in_progress | completed"]
  deadline date [null]
  estimated_hours tinyint [null]
  ai_generated boolean [default: false]
  project_id bigint [not null, ref: > projects.id]
  assigned_to bigint [null, ref: > users.id]
  university_id bigint [not null, ref: > universities.id]
  created_at timestamp
  updated_at timestamp
  Indexes {
    (project_id, ai_generated)
  }
}

Table comments {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  project_id bigint [null, ref: > projects.id]
  task_id bigint [null, ref: > tasks.id]
  comment text [not null]
  created_at timestamp
  updated_at timestamp
  Note: "Scoped via project.university_id"
}

Table project_versions {
  id bigint [pk, increment]
  project_id bigint [not null, ref: > projects.id]
  user_id bigint [not null, ref: > users.id]
  task_id bigint [null, ref: > tasks.id]
  version_title varchar
  version_description text [null]
  file_path varchar [null]
  created_at timestamp
  updated_at timestamp
}

Table project_activities {
  id bigint [pk, increment]
  project_id bigint [not null, ref: > projects.id]
  user_id bigint [not null, ref: > users.id]
  action varchar
  type varchar
  action_key varchar [null]
  meta json [null]
  created_at timestamp
  updated_at timestamp
}

Table git_commits {
  id bigint [pk, increment]
  project_id bigint [not null, ref: > projects.id]
  commit_hash varchar [not null]
  author_name varchar [null]
  author_email varchar [null]
  message text [null]
  committed_at timestamp [null]
  url varchar [null]
  created_at timestamp
  updated_at timestamp
  Indexes {
    (project_id, commit_hash) [unique]
    (project_id, committed_at)
  }
}

Table supervisor_invitations {
  id bigint [pk, increment]
  project_id bigint [not null, ref: > projects.id]
  supervisor_id bigint [not null, ref: > users.id]
  student_id bigint [not null, ref: > users.id, note: "Inviter (project owner)"]
  sent_by_id bigint [null, ref: > users.id]
  status varchar [default: "pending", note: "pending | accepted | rejected"]
  created_at timestamp
  updated_at timestamp
}

Table student_invitations {
  id bigint [pk, increment]
  project_id bigint [not null, ref: > projects.id]
  student_id bigint [not null, ref: > users.id]
  sent_by_id bigint [not null, ref: > users.id]
  status varchar [default: "pending", note: "pending | accepted | rejected"]
  created_at timestamp
  updated_at timestamp
  Indexes {
    (project_id, student_id) [unique]
  }
}

Table bookmarked_ideas {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  suggestion_name varchar(100)
  suggestion_goal text
  suggestion_technologies json
  archived boolean [default: false]
  created_at timestamp
  updated_at timestamp
  Indexes {
    user_id
    (user_id, archived)
  }
}

Table ideation_requests {
  id bigint [pk, increment]
  user_id bigint [null, ref: > users.id]
  interests_hash varchar(64)
  status varchar [note: "success | error | timeout"]
  error_message varchar(255) [null]
  response_time_ms int [null]
  created_at timestamp
  Note: "No updated_at column"
}

Table task_generation_logs {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  project_id bigint [not null, ref: > projects.id]
  status varchar [note: "success | error | timeout"]
  task_count tinyint [null]
  response_time_ms int [null]
  error_message varchar(255) [null]
  created_at timestamp
  Note: "No updated_at column"
}

Table notifications {
  id char(36) [pk, note: "UUID"]
  type varchar
  notifiable_type varchar
  notifiable_id bigint
  data text
  read_at timestamp [null]
  created_at timestamp
  updated_at timestamp
  Note: "Polymorphic — usually App\\Models\\User"
}

Table password_reset_requests {
  id bigint [pk, increment]
  user_id bigint [not null, ref: > users.id]
  university_id bigint [not null, ref: > universities.id]
  email varchar
  student_number varchar [null]
  message text [null]
  status varchar(20) [default: "pending"]
  handled_by bigint [null, ref: > users.id, note: "University admin"]
  handled_at timestamp [null]
  created_at timestamp
  updated_at timestamp
  Indexes {
    (university_id, status)
  }
}

Table personal_access_tokens {
  id bigint [pk, increment]
  tokenable_type varchar
  tokenable_id bigint
  name varchar
  token varchar(64) [unique]
  abilities text [null]
  last_used_at timestamp [null]
  expires_at timestamp [null]
  created_at timestamp
  updated_at timestamp
  Note: "Sanctum — login tokens for users"
}

TableGroup tenancy {
  universities
  roles
  users
  user_profiles
  supervisor_universities
  password_reset_requests
}

TableGroup project_core {
  projects
  project_members
  project_user
  tasks
  comments
  project_versions
  project_activities
  git_commits
}

TableGroup invitations {
  supervisor_invitations
  student_invitations
}

TableGroup ai {
  bookmarked_ideas
  ideation_requests
  task_generation_logs
}

TableGroup auth_system {
  personal_access_tokens
  notifications
  password_reset_requests
}
